[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "omg.lol"
version = "1.0"
authors = [
    { name="Suhas", email="suhas@omg.lol" },
]
description = "A wrapper around the omg.lol API (https://api.omg.lol)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = ["httpx", "emoji", "python-dateutil"]

[project.urls]
"Homepage" = "https://github.com/tildezero/omg-py"
"Bug Tracker" = "https://github.com/tildezero/omg-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["omg"]